# valueai

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-prod.yml
apps/api/: Dockerfile  requirements.base.txt
apps/api/app/: auth.py  db.py  deps.py  gpt_item_profile.py  logging_utils.py  main.py  schemas.py  settings.py  storage.py
apps/api/app/static/: app.js  index.html  styles.css
apps/mobile/: App.js  README.md  app.json  package-lock.json  package.json
apps/web/: .env.example  index.html  package-lock.json  package.json  vite.config.js
apps/web/src/: App.jsx  main.jsx  styles.css
data/logo_yolo_litw/: data.yaml
data/logo_yolo_litw/labels/: train.cache  val.cache
data/logo_yolo_litw/labels/train/: img000001.txt  img000002.txt  img000003.txt  img000004.txt  img000005.txt  img000006.txt  img000007.txt  img000008.txt  img000009.txt  img000010.txt  img000011.txt  img000012.txt  img000013.txt  (+87 more)
docs/: API.md  DEPLOY_AWS.md  LABELING_GUIDE.md  WEB_UI.md
infra/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
samples/: README.md
scripts/: train_brand_detector.py  train_condition_models.py  train_logo_classifier.py  train_logo_yolo_litw.py  validate_brand_dataset.py  validate_condition_dataset.py
tests/: test_api_integration.py  test_brand_fusion.py  test_brand_matcher.py  test_brand_normalization.py  test_brand_site_provider.py  test_firecrawl_agent_provider.py  test_poshmark_provider.py  test_rebag_provider.py  test_valuation_engine.py
(+10657 files in other folders)
