[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valueai-mvp"
version = "0.1.0"
description = "Fashion brand and condition analysis MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "Pillow>=10.4",
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "rapidfuzz>=3.9",
  "boto3>=1.34",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
ml = [
  "paddleocr>=2.7.0.3",
  "easyocr>=1.7",
  "ultralytics>=8.2",
  "timm>=1.0",
  "torch>=2.3",
]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["apps/api", "packages/brand/src", "packages/condition/src", "packages/valuation/src"]

[tool.setuptools.package-data]
brand = ["brands.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/api", "packages/brand/src", "packages/condition/src", "packages/valuation/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
